Update RecentSessionPane.java
默认按照访问时间降序排序